fixed text align in about us

--- a/infoSite/static/styles/about-us.css
+++ b/infoSite/static/styles/about-us.css
@@ -74,6 +74,7 @@ div.bio:nth-child(2n) .biotextwrap {
     }
 
     div.bio:nth-child(2n) {
+        align-items: center;
         flex-direction: column;
     }
 
